sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:7: error: not found: value enOrdre
  while (enOrdre){
         ^AlgCocktailSort3:18: error: not found: value enOrdre
    if(enOrdre){  	
       ^