sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
  var enOrdreC = true ;
  var enOrdreD = true ;
  var fin = getNombreValeurs()-2;
  var debut = 0;
  while (enOrdre){
    enOrdreC = false ;
    enOrdreD = false ;
    for (i <- debut to fin){
      if (plusPetit(i+1,i)){
        echange(i+1,i)
        enOrdreC = true ;
      }    
    }

    fin-=1;
    if(enOrdre){  	
      for (j <- fin to debut by -1){
        if (plusPetit(j+1,j)){
          echange(j+1,j)
          enOrdreD = true ;
        }
      }  
      debut+=1;
    }     
  }
}
